[tool.poetry]
name = "python-16"
version = "0.1.0"
description = ""
authors = ["Ekaterina Polushina <terryrinkelly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc2"
pytest = "8.2.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
